--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3 class="text-xl font-semibold mb-2">Java per principianti</h3>
         <p class="text-sm mb-1">1a Edizione</p>
         <p class="text-sm mb-1">Uscita prevista:</p>
-        <p class="text-base font-semibold mb-4">Fine 2025</p>
+        <p class="text-base font-semibold mb-4">Prossimamente</p>
       </div>
     </div>
 
