--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                             transition-all duration-300 ease-in-out rounded-b-lg">
         <h3 class="text-xl font-semibold mb-2">Python per principianti</h3>
         <p class="text-sm mb-1">1a Edizione (2024)</p>
+        <p class="text-sm mb-1">356 pagine</p>
         <p class="text-base font-semibold mb-4">€36,39</p>
         <a href="https://www.amazon.it/Python-principianti-Niccol%C3%B2-Nannucci/dp/B0DJXV34XC/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=20M7DJ05JJGM1&dib=eyJ2IjoiMSJ9.JxCifokCDIXAUUDagCsO5Q.mos0FgqMxN3WtjzRUHWh_3lF1gwAj9_uTT4XDK4PzcQ&dib_tag=se&keywords=python+per+principianti+nannucci&qid=1750545172&sprefix=python+per+principianti+nannucci%2Caps%2C84&sr=8-1" target="_blank"
            class="buy-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full
