--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </main>
 
 <footer class="bg-gray-900 text-white py-8 text-center mt-12 shadow-inner">
-  <p class="text-sm opacity-80">Per segnalazioni di errori, commenti, suggerimenti: </p><a href="mailto:nannucci.books@gamil.com">nannucci.books@gmail.com</a>
+  <p class="text-sm opacity-80">Per segnalazioni di errori, commenti, suggerimenti: </p><a href="mailto:nannucci.books@gmail.com">nannucci.books@gmail.com</a>
   <p class="text-sm opacity-80">&copy; 2025 Niccolò Nannucci. Tutti i diritti riservati.</p>
 </footer>
 </body>
