--- a/index.html
+++ b/index.html
@@ -47,9 +47,16 @@
         <p class="text-sm mb-1">356 pagine</p>
         <p class="text-base font-semibold mb-4">€36,39</p>
         <a href="https://www.amazon.it/Python-principianti-Niccol%C3%B2-Nannucci/dp/B0DJXV34XC/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=20M7DJ05JJGM1&dib=eyJ2IjoiMSJ9.JxCifokCDIXAUUDagCsO5Q.mos0FgqMxN3WtjzRUHWh_3lF1gwAj9_uTT4XDK4PzcQ&dib_tag=se&keywords=python+per+principianti+nannucci&qid=1750545172&sprefix=python+per+principianti+nannucci%2Caps%2C84&sr=8-1" target="_blank"
-           class="buy-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full
+           class="buy-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-16 rounded-full
+                              transition duration-300 ease-in-out shadow-lg hover:shadow-xl flex items-center gap-2">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shopping-cart-icon lucide-shopping-cart"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/></svg>
+                              Ottieni
+        </a>
+        <div style="height: 15px;"></div>
+        <a href="pages/python_per_principianti.html" target="_blank"
+           class="info-button bg-white hover:bg-gray-400 text-black hover:text-white text-sm py-1 px-3 rounded-full
                               transition duration-300 ease-in-out shadow-lg hover:shadow-xl">
-          Ottieni
+          Maggiori informazioni
         </a>
       </div>
     </div>
@@ -69,6 +76,12 @@
         <p class="text-sm mb-1">1a Edizione</p>
         <p class="text-sm mb-1">Uscita prevista:</p>
         <p class="text-base font-semibold mb-4">Prossimamente</p>
+        <div style="height: 15px;"></div>
+        <a href="pages/java_per_principianti.html" target="_blank"
+           class="info-button bg-white hover:bg-gray-400 text-black hover:text-white text-sm py-1 px-3 rounded-full
+                              transition duration-300 ease-in-out shadow-lg hover:shadow-xl">
+          Maggiori informazioni
+        </a>
       </div>
     </div>
 
