--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                               Ottieni
         </a>
         <div style="height: 15px;"></div>
-        <a href="pages/python_per_principianti.html" target="_blank"
+        <a href="pages/python_per_principianti.html"
            class="info-button bg-white hover:bg-gray-400 text-black hover:text-white text-sm py-1 px-3 rounded-full
                               transition duration-300 ease-in-out shadow-lg hover:shadow-xl">
           Maggiori informazioni
@@ -77,7 +77,7 @@
         <p class="text-sm mb-1">Uscita prevista:</p>
         <p class="text-base font-semibold mb-4">Prossimamente</p>
         <div style="height: 15px;"></div>
-        <a href="pages/java_per_principianti.html" target="_blank"
+        <a href="pages/java_per_principianti.html"
            class="info-button bg-white hover:bg-gray-400 text-black hover:text-white text-sm py-1 px-3 rounded-full
                               transition duration-300 ease-in-out shadow-lg hover:shadow-xl">
           Maggiori informazioni
