--- a/pages/java_per_principianti.html
+++ b/pages/java_per_principianti.html
@@ -24,7 +24,7 @@
   <main class="container mx-auto p-6 lg:p-10">
     
     <div class="bg-white rounded-lg shadow-lg p-6 flex flex-col lg:flex-row items-center gap-6">
-      <img src="/img/JPP.jpeg" alt="Copertina del libro" class="w-full max-w-xs rounded-lg shadow-md">
+      <img src="../img/JPP.jpeg" alt="Copertina del libro" class="w-full max-w-xs rounded-lg shadow-md">
 
       <div class="flex-1">
         <h2 class="text-3xl font-bold mb-4">Java per principianti</h2>
