--- a/pages/python_per_principianti.html
+++ b/pages/python_per_principianti.html
@@ -46,12 +46,18 @@
           </div>
         </div>
 
-        <a href="https://www.amazon.it/Python-principianti-Niccol%C3%B2-Nannucci/dp/B0DJXV34XC/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=20M7DJ05JJGM1&dib=eyJ2IjoiMSJ9.JxCifokCDIXAUUDagCsO5Q.mos0FgqMxN3WtjzRUHWh_3lF1gwAj9_uTT4XDK4PzcQ&dib_tag=se&keywords=python+per+principianti+nannucci&qid=1750545172&sprefix=python+per+principianti+nannucci%2Caps%2C84&sr=8-1" target="_blank"
-   class="buy-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full
-          transition duration-300 ease-in-out shadow-lg hover:shadow-xl inline-flex items-center gap-2">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shopping-cart-icon lucide-shopping-cart"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/></svg>
-  Ottieni
-</a>
+        <div class="flex flex-wrap gap-2 mt-4">
+          <a href="https://www.amazon.it/Python-principianti-Niccol%C3%B2-Nannucci/dp/B0DJXV34XC/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=20M7DJ05JJGM1&dib=eyJ2IjoiMSJ9.JxCifokCDIXAUUDagCsO5Q.mos0FgqMxN3WtjzRUHWh_3lF1gwAj9_uTT4XDK4PzcQ&dib_tag=se&keywords=python+per+principianti+nannucci&qid=1750545172&sprefix=python+per+principianti+nannucci%2Caps%2C84&sr=8-1"
+             target="_blank"
+             class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full inline-flex items-center gap-2 shadow-lg hover:shadow-xl transition">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shopping-cart-icon lucide-shopping-cart"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/></svg>
+            Ottieni
+          </a>
+          <a href="../previews/Estratto_PPP.pdf" target="_blank" class="bg-blue-100 text-blue-700 font-bold py-2 px-4 rounded-full inline-flex items-center gap-2 hover:bg-blue-200 transition">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-glasses-icon lucide-glasses"><circle cx="6" cy="15" r="4"/><circle cx="18" cy="15" r="4"/><path d="M14 15a2 2 0 0 0-2-2 2 2 0 0 0-2 2"/><path d="M2.5 13 5 7c.7-1.3 1.4-2 3-2"/><path d="M21.5 13 19 7c-.7-1.3-1.5-2-3-2"/></svg>
+            Leggi un estratto
+          </a>
+        </div>
 
       </div>
     </div>
